Website refinements after reviewing current content with Claude Code and Opus 4.5

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ theme:
 # Enhanced navigation structure
 nav:
   - Home: index.md
+  - New Here?: new-here.md
   - About Us:
     - about/index.md
     - Our History: history/index.md
